@startuml
title 面向马来西亚留学生的汉语练习平台后台统计模块数据关系图
skinparam defaultFontName "Noto Sans CJK SC"
skinparam shadowing false
skinparam backgroundColor white
skinparam ArrowColor #3C5488
skinparam ActorBorderColor #3C5488
skinparam ActorFontColor #111827
skinparam UsecaseBorderColor #0072B2
skinparam UsecaseBackgroundColor #F8FBFF
skinparam ComponentBorderColor #0072B2
skinparam ComponentBackgroundColor #F8FBFF
skinparam DatabaseBorderColor #009E73
skinparam DatabaseBackgroundColor #F4FFF9
skinparam SequenceLifeLineBorderColor #3C5488
skinparam ParticipantBorderColor #0072B2
skinparam ParticipantBackgroundColor #F8FBFF
skinparam ActivityBorderColor #0072B2
skinparam ActivityBackgroundColor #F8FBFF

class "后台统计模块请求参数" as Req {
  +userId
  +query
  +payload
}
class "后台统计模块响应结果" as Res {
  +code
  +message
  +data
}
class "users" as D0 {
  +id
  +业务字段
  +时间字段
}
class "questions" as D1 {
  +id
  +业务字段
  +时间字段
}
class "papers" as D2 {
  +id
  +业务字段
  +时间字段
}
class "study_records" as D3 {
  +id
  +业务字段
  +时间字段
}
Req --> D0 : /api/admin/stats
Req --> D1 : /api/admin/stats
Req --> D2 : /api/admin/stats
Req --> D3 : /api/admin/stats
D0 --> D1 : 学生数、题目数、试卷数、记录数和平均分统计
D1 --> D2 : 学生数、题目数、试卷数、记录数和平均分统计
D2 --> D3 : 学生数、题目数、试卷数、记录数和平均分统计
D0 --> Res : 组装返回
@enduml